--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
               To Do
             </h2>
             <ul id="list-toDo" class="list-group list-group-flush">
-              <li class="list-group-item">
-                <span class="badge badge-primary badge-pill">05/28/2020</span>
-                <p class="m-1">Sample task to do</p>
-              </li>
+
             </ul>
           </div>
         </div>
@@ -47,10 +44,7 @@
               In Progress
             </h2>
             <ul id="list-inProgress" class="list-group list-group-flush">
-              <li class="list-group-item">
-                <span class="badge badge-primary badge-pill">05/28/2020</span>
-                <p class="m-1">Sample task in progress</p>
-              </li>
+
             </ul>
           </div>
         </div>
@@ -62,10 +56,7 @@
               In Review
             </h2>
             <ul id="list-inReview" class="list-group list-group-flush">
-              <li class="list-group-item">
-                <span class="badge badge-primary badge-pill">05/28/2020</span>
-                <p class="m-1">Sample task in review</p>
-              </li>
+
             </ul>
           </div>
         </div>
@@ -77,10 +68,7 @@
               Done
             </h2>
             <ul id="list-done" class="list-group list-group-flush">
-              <li class="list-group-item">
-                <span class="badge badge-primary badge-pill">05/28/2020</span>
-                <p class="m-1">Sample task that's done</p>
-              </li>
+
             </ul>
           </div>
         </div>
@@ -133,6 +121,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="assets/js/script.js"></script>
 
 </body>
